Sorgente/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Tipo_prelievi__c</fullName>
        <label>Tipo prelievi</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sangue+EDTA</fullName>
                </value>
                <value>
                    <fullName>Sangue+eparina</fullName>
                </value>
                <value>
                    <fullName>Salivare</fullName>
                </value>
                <value>
                    <fullName>Urine</fullName>
                </value>
                <value>
                    <fullName>Siero</fullName>
                </value>
                <value>
                    <fullName>Liquido seminale</fullName>
                </value>
                <value>
                    <fullName>Istologico</fullName>
                </value>
                <value>
                    <fullName>Citologico</fullName>
                </value>
                <value>
                    <fullName>Tampone uretrale</fullName>
                </value>
                <value>
                    <fullName>Plasma</fullName>
                </value>
                <value>
                    <fullName>Secreto vaginale</fullName>
                </value>
                <value>
                    <fullName>Tampone faringeo</fullName>
                </value>
                <value>
                    <fullName>Tampone vaginale</fullName>
                </value>
                <value>
                    <fullName>Tampone vagino-uretrale</fullName>
                </value>
                <value>
                    <fullName>Altro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tot_prelievi_Aurora_a_Gen_2018__c</fullName>
        <label>Tot. prelievi Aurora a Gen 2018</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Utente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Area Manager\SR</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Referenti</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Utente_attivo__c</fullName>
        <formula>Owner.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utente attivo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>campo_tecnico__c</fullName>
        <label>campo tecnico</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>R_I_miei_specialisti_Auliso</fullName>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>Status_SS__c</columns>
        <columns>Status_SG__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Specialista</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Auliso</value>
        </filters>
        <label>R- I miei specialisti Auliso</label>
        <sharedTo>
            <group>Auliso</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>R_I_miei_specialisti_Barbera</fullName>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>Status_SS__c</columns>
        <columns>Status_SG__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Specialista</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Barbera</value>
        </filters>
        <label>R- I miei specialisti Barbera</label>
        <sharedTo>
            <group>Barbera</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>R_I_miei_specialisti_Borruso</fullName>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>Status_SS__c</columns>
        <columns>Status_SG__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Specialista</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Borruso</value>
        </filters>
        <label>R- I miei specialisti Borruso</label>
        <sharedTo>
            <group>Borruso</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>R_I_miei_specialisti_Candelli</fullName>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>Status_SS__c</columns>
        <columns>Status_SG__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Specialista</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Candelli</value>
        </filters>
        <label>R- I miei specialisti Candelli</label>
        <sharedTo>
            <group>Candelli</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>R_I_miei_specialisti_Caruso</fullName>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>Status_SS__c</columns>
        <columns>Status_SG__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Specialista</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Caruso</value>
        </filters>
        <label>R- I miei specialisti Caruso</label>
        <sharedTo>
            <group>Caruso</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>R_I_miei_specialisti_Catenacci</fullName>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>Status_SS__c</columns>
        <columns>Status_SG__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Specialista</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Catenacci</value>
        </filters>
        <label>R- I miei specialisti Catenacci</label>
        <sharedTo>
            <group>Catenacci</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>R_I_miei_specialisti_Correddu</fullName>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>Status_SS__c</columns>
        <columns>Status_SG__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Specialista</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Correddu</value>
        </filters>
        <label>R- I miei specialisti Correddu</label>
        <sharedTo>
            <group>Correddu</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>R_I_miei_specialisti_De_Lucia</fullName>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>Status_SS__c</columns>
        <columns>Status_SG__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Specialista</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>De Lucia</value>
        </filters>
        <label>R- I miei specialisti De Lucia</label>
        <sharedTo>
            <group>De_Lucia</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>R_I_miei_specialisti_Fabbri</fullName>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>Status_SS__c</columns>
        <columns>Status_SG__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Specialista</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Fabbri</value>
        </filters>
        <label>R- I miei specialisti Fabbri</label>
        <sharedTo>
            <group>Fabbri</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>R_I_miei_specialisti_Federici</fullName>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>Status_SS__c</columns>
        <columns>Status_SG__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Specialista</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Federici</value>
        </filters>
        <label>R- I miei specialisti Federici</label>
        <sharedTo>
            <group>Federici</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>R_I_miei_specialisti_Fertitta</fullName>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>Status_SS__c</columns>
        <columns>Status_SG__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Specialista</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Fertitta</value>
        </filters>
        <label>R- I miei specialisti Fertitta</label>
        <sharedTo>
            <group>Fertitta</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>R_I_miei_specialisti_Gagaridis</fullName>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>Status_SS__c</columns>
        <columns>Status_SG__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Specialista</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Gagaridis</value>
        </filters>
        <label>R- I miei specialisti Gagaridis</label>
        <sharedTo>
            <group>Gagaridis</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>R_I_miei_specialisti_Galle</fullName>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>Status_SS__c</columns>
        <columns>Status_SG__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Specialista</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>contains</operation>
            <value>Gallè</value>
        </filters>
        <label>R- I miei specialisti Gallè</label>
        <sharedTo>
            <group>Gall</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>R_I_miei_specialisti_Grande</fullName>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>Status_SS__c</columns>
        <columns>Status_SG__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Specialista</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Grande</value>
        </filters>
        <label>R- I miei specialisti Grande</label>
        <sharedTo>
            <group>Grande</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>R_I_miei_specialisti_Greco</fullName>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>Status_SS__c</columns>
        <columns>Status_SG__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Specialista</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Greco</value>
        </filters>
        <label>R- I miei specialisti Greco</label>
        <sharedTo>
            <group>Greco</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Collaboratore</fullName>
        <active>true</active>
        <description>Un collaboratore di Sorgente o Sorgente Genetica</description>
        <label>Collaboratore</label>
    </recordTypes>
    <recordTypes>
        <fullName>Referente_aziendale</fullName>
        <active>true</active>
        <description>Un&apos;amministratore di un account di tipo professional o standard</description>
        <label>Referente aziendale</label>
    </recordTypes>
    <recordTypes>
        <fullName>Specialista</fullName>
        <active>true</active>
        <description>Uno medico con caratteristiche da influencer</description>
        <label>Specialista</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>PC_SS</fullName>
        <active>true</active>
        <errorConditionFormula>PC_SS__c &gt; 30</errorConditionFormula>
        <errorDisplayField>PC_SS__c</errorDisplayField>
        <errorMessage>Il valore massimo possibile è 30.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Utente_diverso_da_Admin</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISNEW(), ISCHANGED(PC_SS__c), $Profile.Name &lt;&gt; &quot;Amministratore del sistema&quot; )</errorConditionFormula>
        <errorDisplayField>PC_SS__c</errorDisplayField>
        <errorMessage>Se non sei amministratore non puoi modificare il valore.</errorMessage>
    </validationRules>
</CustomObject>